Added auto escaping for post text

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <nav class="pa3 pa4-ns">
-            <a class="link dim black b f6 f5-ns dib mr3" href="#" title="Home">UTF 9000</a>
-            <a class="link dim gray    f6 f5-ns dib mr3" href="#" title="About">About</a>
-            <a class="link dim gray    f6 f5-ns dib" href="#" title="Contact">Contact</a>
+            <a class="link dim b f6 f5-ns dib mr3" href="/blog" title="Home">UTF 9000</a>
+            <a class="link dim f6 f5-ns dib mr3" href="#" title="About">About</a>
+            <a class="link dim f6 f5-ns dib" href="#" title="Contact">Contact</a>
         </nav>
-        <section class="pa3 pa5-ns bt b--black-10 black-70 bg-white">
+        <section class="pa3 pa5-ns bt b--black-10 black-70">
             {% block content %}
             {% endblock %}
         </section>
