Simplified dates and automated slugification

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,7 +16,7 @@
             {% block content %}
             {% endblock %}
         </section>
-        <footer class="pv4 ph3 ph5-ns tc">
+        <footer class="bt b--black-10 pv4 ph3 ph5-ns tc">
           <a class="link dim gray dib h2 w2 br-100 mr3" href="https://twitter.com/sentreh" target="_blank" rel="noreferrer noopener">
             <svg data-icon="discord" viewBox="0 0 24 24" style="fill:currentcolor">
               <title>Discord</title>
