--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -7,232 +7,14 @@
     font-weight: 400;
 }
 
-/* Navbar -> http://tachyons.io/components/nav/title-link-list/index.html */
-
-.dib {
-    display: inline-block;
-}
-
-.b {
-    font-weight: bold;
-}
+/* Navbar */
 
 nav a.b {
     font-size: 1.2em;
 }
 
-.link {
-    text-decoration: none;
-    transition: color .15s ease-in;
-}
+/* Post Detail */
 
-.link:link, .link:visited {
-    transition: color .15s ease-in;
-}
-
-.link:hover {
-    transition: color .15s ease-in;
-}
-
-.link:active {
-    transition: color .15s ease-in;
-}
-
-.link:focus {
-    transition: color .15s ease-in;
-    outline: 1px dotted currentColor;
-}
-
-.black {
-    color: #000;
-}
-
-.gray {
-    color: #777;
-}
-
-.pa3 {
-    padding: 1rem;
-}
-
-.mr3 {
-    margin-right: 1rem;
-}
-
-.f6 {
-    font-size: .875rem;
-}
-
-.dim {
-    opacity: 1;
-    transition: opacity .15s ease-in;
-}
-
-.dim:hover, .dim:focus {
-    opacity: .5;
-    transition: opacity .15s ease-in;
-}
-
-.dim:active {
-    opacity: .8;
-    transition: opacity .15s ease-out;
-}
-
-@media screen and (min-width: 30em) {
-    .pa4-ns {
-        padding: 2rem;
-    }
-
-    .f5-ns {
-        font-size: 1rem;
-    }
-}
-
-/* Post List -> http://tachyons.io/components/lists/title-text/index.html */
-
-.bb {
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-}
-
-.b--black-10 {
-    border-color: rgba(0, 0, 0, .1);
-}
-
-.db {
-    display: block;
-}
-
-.lh-copy {
-    line-height: 1.5;
-}
-
-.list {
-    list-style-type: none;
-}
-
-.pa3 {
-    padding: 1rem;
-}
-
-.pl0 {
-    padding-left: 0;
-}
-
-.mb1 {
-    margin-bottom: .25rem;
-}
-
-.f3 {
-    font-size: 1.5rem;
-}
-
-.f5 {
-    font-size: 1rem;
-}
-
-.measure {
-    max-width: 30em;
-}
-
-@media screen and (min-width: 30em) {
-    .pa4-ns {
-        padding: 2rem;
-    }
-}
-
-/* Footer -> http://tachyons.io/components/footers/social/index.html */
-
-.br-100 {
-    border-radius: 100%;
-}
-
-.dib {
-    display: inline-block;
-}
-
-.h2 {
-    height: 2rem;
-}
-
-.link {
-    text-decoration: none;
-    transition: color .15s ease-in;
-}
-
-.link:link, .link:visited {
-    transition: color .15s ease-in;
-}
-
-.link:hover {
-    transition: color .15s ease-in;
-}
-
-.link:active {
-    transition: color .15s ease-in;
-}
-
-.link:focus {
-    transition: color .15s ease-in;
-    outline: 1px dotted currentColor;
-}
-
-.w2 {
-    width: 2rem;
-}
-
-.gray {
-    color: #777;
-}
-
-.pv4 {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-}
-
-.ph3 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
-.mr3 {
-    margin-right: 1rem;
-}
-
-.mt4 {
-    margin-top: 2rem;
-}
-
-.tc {
-    text-align: center;
-}
-
-.f6 {
-    font-size: .875rem;
-}
-
-.dim {
-    opacity: 1;
-    transition: opacity .15s ease-in;
-}
-
-.dim:hover, .dim:focus {
-    opacity: .5;
-    transition: opacity .15s ease-in;
-}
-
-.dim:active {
-    opacity: .8;
-    transition: opacity .15s ease-out;
-}
-
-@media screen and (min-width: 30em) {
-    .ph5-ns {
-        padding-left: 4rem;
-        padding-right: 4rem;
-    }
-
-    .mr4-ns {
-        margin-right: 2rem;
-    }
+.meta p {
+    font-style: italic;
 }
