--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,15 +1,21 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <article class="pa4 measure center">
-        <h1>{{ post.title }}</h1>
-        {% if post.draft %}
-            </h2>Status: This is a draft post</h2>
-        {% else %}
-            <h2>Written on {{ post.published_date|date:"N m, Y" }}</h2>
-        {% endif %}
-        {% autoescape off %}
-            <p>{{ post.text|linebreaksbr|escape }}</p>
-        {% endautoescape %}
+    <article class="measure center">
+        <header>
+            <h1 class="b" id="title">{{ post.title }}</h1>
+            <div class="meta">
+                {% if post.draft %}
+                <p id="status">Status: This is a draft post</p>
+                {% else %}
+                <p id="published_date">Written on {{ post.date|date:"N m, Y" }}</p>
+                {% endif %}
+            </div>
+        </header>
+        <section>
+            {% autoescape off %}
+                <p>{{ post.text|linebreaksbr|escape }}</p>
+            {% endautoescape %}
+        </section>
     </article>
 {% endblock %}
