--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,11 +3,11 @@
 {% block content %}
     <ul class="list p10">
         {% for post in posts %}
-            <li class="pa3 pa4-ns bb b--black-10">
+            <li class="pa3 pa4-ns">
                 <b class="db f4 mb1">
                     <a href="{{ post.slug }}">{{ post.title }}</a>
                 </b>
-        	    <span class="f5 db lh-copy measure">Published: {{ post.published_date }}</span>
+        	    <span class="f5 db lh-copy measure">Written on {{ post.date|date:"N m, Y" }}</span>
             </li>
         {% endfor %}
     </ul>
