Added markdown rendering support

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,7 +14,7 @@
     </header>
     <section>
       {% autoescape off %}
-        <p>{{ post.text|linebreaksbr|escape }}</p>
+        <p>{{ post.render|linebreaks|escape }}</p>
       {% endautoescape %}
     </section>
   </article>
