Cleaned up post rendering and confirmed that image rendering works

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,7 +8,7 @@
         <link href="{% static 'blog/style.css' %}" type="text/css" rel="stylesheet" />
     </head>
     <body>
-        <nav class="pa3 pa4-ns">
+        <nav class="pa3">
             <a class="link dim b f6 f5-ns dib mr3" href="{% url 'blog:post_list' %}" title="Home">UTF 9000</a>
             <a class="link dim f6 f5-ns dib mr3" href="#" title="About">About</a>
             <a class="link dim f6 f5-ns dib" href="#" title="Contact">Contact</a>
