--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,7 @@
 {% extends 'blog/base.html' %}
 
+{% block title %}{{ post.title }} | utf9k{% endblock %}
+
 {% block content %}
   <article class="measure center">
     <header>
