Added explicit home button

--- a/blog/templates/blog/nav.html
+++ b/blog/templates/blog/nav.html
@@ -1,5 +1,6 @@
 <nav class="pa3">
     <a class="link hover-hot-pink b f6 f5-ns dib mr3" href="{% url 'blog:post_list' %}" title="Home">utf9k</a>
-    <a class="link hover-red f6 f5-ns dib mr3" href="#" title="About">About</a>
-    <a class="link hover-red f6 f5-ns dib" href="#" title="Contact">Contact</a>
+    <a class="link hover-red f6 f5-ns dib mr3" href="/" title="root">home</a>
+    <a class="link hover-red f6 f5-ns dib mr3" href="/about" title="About">about</a>
+    <a class="link hover-red f6 f5-ns dib" href="/contact" title="Contact">contact</a>
 </nav>
