Added viewport settings for mobile

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>{% block title %}utf9k{% endblock %}</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="{% static 'blog/tachyons.min.css' %}" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=NTR" type="text/css" rel="stylesheet" />
         <link href="{% static 'blog/tippy.css' %}" type="text/css" rel="stylesheet" />
