--- a/thingsimade/blog/templates/blog/post_list.html
+++ b/thingsimade/blog/templates/blog/post_list.html
@@ -1,5 +1,7 @@
 {% extends 'blog/base.html' %}
 
+{% block title %}utf9k{% endblock %}
+
 {% block content %}
     <ul class="list p10">
         {% if posts %}
