--- a/thingsimade/base/templates/base/index.html
+++ b/thingsimade/base/templates/base/index.html
@@ -1,37 +1,22 @@
-{% load static %}
+{% extends 'blog/base.html' %}
 
-<!-- This site will be replaced pretty soon but it'll do as a placeholder -->
+{% block nav %}#{% endblock %}
+{% block navlink %}/{% endblock %}
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>It"s all hidden away!</title>
-    <style>
-      .flex-container {
-          display: flex;
-          flex-direction: row;
-          flex-wrap: wrap;
-          justify-content: center;
-          align-content: center;
-          align-items: center;
-      }
+{% block content %}
+  <div class="ph5 pv6 black-70">
+    <p>Oh, hello there!</p>
 
-      a {
-          text-decoration: none;
-      }
-    </style>
-</head>
-<body>
-    <div class="flex-container">
-        <img src="{% static 'base/nano.png' %}" height="464px" width="602px" alt="A screenshot of Nano running on my old AWS server">
-        <p>
-           <!-- These seemingly nonsense characters are the HTML entities for emoji! -->
-           <a href="mailto:marcus@thingsima.de">&#x1F4E5; Email</a>
-           <br />
-           <a href="tel:+64-21-08154500">&#x1F4DE; Mobile</a>
-           <br />
-           <a href="https://twitter.com/sentreh" target="_blank">&#x1F4E1; Twitter</a>
-        </p>
-    </div>
-</body>
-</html>
+    <p>Don't just sit there, click something!</p>
+
+    <p>I can't click it for you, short of installing malware or something, haha.</p>
+
+    <p>If you like videogames, maybe check out some old reviews or if you're more technologically inclined, check out some <a href="/projects">projects</a> or my <a href="/blog">blog</a>.</p>
+
+    <p>You can also view the source code of this entire site <a href="https://github.com/marcus-crane/site">here</a> on Github!</p>
+
+    <p>What, did you expect 10MB+ of Javascript spaghetti? Heck no, this site is made with love :)</p>
+
+    <p>Enjoy!</p>
+  </div>
+{% endblock %}
