Rearranged templates to make sense now that they pull from one source

--- a/thingsimade/templates/base/root.html
+++ b/thingsimade/templates/base/root.html
@@ -4,6 +4,7 @@
         <title>{% block title %}utf9k{% endblock %}</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#317EFB" />
         <link href="{% static 'blog/tachyons.min.css' %}" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=NTR" type="text/css" rel="stylesheet" />
         <link href="{% static 'blog/tippy.css' %}" type="text/css" rel="stylesheet" />
@@ -22,7 +23,7 @@
             {% block content %}
             {% endblock %}
         </section>
-        {% include "blog/footer.html" %}
+        {% include 'base/footer.html' %}
         <script src="{% static 'blog/tippy.min.js' %}"></script>
         <script>tippy('.tip', { arrow: true, interactive: true, theme: 'light' })</script>
     </body>
