--- a/thingsimade/templates/base/index.html
+++ b/thingsimade/templates/base/index.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %}
+{% extends 'base/root.html' %}
 
 {% block nav %}#{% endblock %}
 {% block navlink %}/{% endblock %}
