--- a/thingsimade/templates/base/root.html
+++ b/thingsimade/templates/base/root.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#317EFB" />
-        <link href="{% static 'blog/tachyons.min.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'base/tachyons.min.css' %}" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=NTR" type="text/css" rel="stylesheet" />
-        <link href="{% static 'blog/tippy.css' %}" type="text/css" rel="stylesheet" />
-        <link href="{% static 'blog/style.css' %}" type="text/css" rel="stylesheet" />
+        <link href="{% static 'base/tippy.css' %}" type="text/css" rel="stylesheet" />
+        <link href="{% static 'base/style.css' %}" type="text/css" rel="stylesheet" />
     </head>
     <body>
         <nav class="pa3">
