Added a feedback form

--- a/thingsimade/templates/base/root.html
+++ b/thingsimade/templates/base/root.html
@@ -23,8 +23,8 @@
             {% block content %}
             {% endblock %}
         </section>
-        {% include 'base/footer.html' %}
+        <!-- {% include 'base/footer.html' %}
         <script src="{% static 'blog/tippy.min.js' %}"></script>
-        <script>tippy('.tip', { arrow: true, interactive: true, theme: 'light' })</script>
+        <script>tippy('.tip', { arrow: true, interactive: true, theme: 'light' })</script> -->
     </body>
 </html>
