--- a/thingsimade/templates/contact/form.html
+++ b/thingsimade/templates/contact/form.html
@@ -3,7 +3,8 @@
 {% block title %}Contact | utf9k{% endblock %}
 
 {% block content %}
-<form class="pa4 black-80">
+<form class="pa4 black-80" method="POST" action="http://localhost:8000/contact/">
+  {% csrf_token %}
   <legend class="f4 fw6 ph0 mh0">Got some feedback or perhaps a compliment?</legend>
   </br>
   <div class="measure">
@@ -14,14 +15,14 @@
   <br />
   <div class="measure">
     <label for="email" class="f6 b db mb2">Email Address <span class="normal black-60">(optional)</span></label>
-    <input id="email" name="email" class="input-reset ba b--black-20 pa2 mb2 db w-100" type="text" aria-describedby="email-desc">
+    <input id="email" name="email" class="input-reset ba b--black-20 pa2 mb2 db w-100" type="email" aria-describedby="email-desc">
     <small id="email-desc" class="f6 black-60 db mb2">If you'd like a reply, let me know where to send it!</small>
   </div>
   <br />
   <div>
-    <label for="comment" class="f6 b db mb2">Message</label>
-    <textarea id="comment" name="comment" class="db border-box hover-black w-100 measure ba b--black-20 pa2 br2 mb2" aria-describedby="comment-desc"></textarea>
-    <small id="comment-desc" class="f6 black-60">What's the haps?</small>
+    <label for="message" class="f6 b db mb2">Message</label>
+    <textarea id="message" name="message" class="db border-box hover-black w-100 measure ba b--black-20 pa2 br2 mb2" aria-describedby="message-desc"></textarea>
+    <small id="message-desc" class="f6 black-60">What's the haps?</small>
   </div>
   <br />
   <div class="g-recaptcha" data-sitekey="6LdtITYUAAAAAFY3REOkCUqynK0vWIYKYr9G804q"></div>
