--- a/thingsimade/templates/blog/post_detail.html
+++ b/thingsimade/templates/blog/post_detail.html
@@ -20,14 +20,14 @@
       {% endautoescape %}
     </section>
     <div id="pager" class="flex items-center justify-center pa4">
-      <a href="{% url 'blog:post_detail' post.id %}" class="f5 no-underline bg-animate hover-bg-green inline-flex items-center pa3 ba border-box mr4">
+      <a style="{% if not post.prev %}display: none;{% endif %}" href="{% if post.prev %}{% url 'blog:post_detail' post.prev %}{% endif %}" class="f5 no-underline bg-animate hover-bg-green inline-flex items-center pa3 ba border-box mr4">
         <svg class="w1" data-icon="chevronLeft" viewBox="0 0 32 32" style="fill:currentcolor">
           <title>chevronLeft icon</title>
             <path d="M20 1 L24 5 L14 16 L24 27 L20 31 L6 16 z"></path>
           </svg>
         <span class="pl1">Previous</span>
       </a>
-      <a href="{% url 'blog:post_detail' post.id %}" class="f5 no-underline bg-animate hover-bg-green inline-flex items-center pa3 ba border-box">
+      <a style="{% if not post.next %}display: none;{% endif %}" href="{% if post.next %}{% url 'blog:post_detail' post.next %}{% endif %}" class="f5 no-underline bg-animate hover-bg-green inline-flex items-center pa3 ba border-box">
         <span class="pr1">Next</span>
         <svg class="w1" data-icon="chevronRight" viewBox="0 0 32 32" style="fill:currentcolor">
           <title>chevronRight icon</title>
