Refactored some blog bits and started a near blank projects app

--- a/thingsimade/templates/base/index.html
+++ b/thingsimade/templates/base/index.html
@@ -1,5 +1,7 @@
 {% extends 'base/root.html' %}
 
+{% block title %}things i made{% endblock %}
+
 {% block nav %}#{% endblock %}
 {% block navlink %}/{% endblock %}
 
