--- a/thingsimade/templates/base/root.html
+++ b/thingsimade/templates/base/root.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <nav class="pa3">
-            <a class="link hover-hot-pink b f6 f5-ns dib mr3" href="{% block navlink %}{% url 'blog:post_list' %}{% endblock %}" title="Home">{% block nav %}utf9k{% endblock %}</a>
+            <a class="link hover-hot-pink b f6 f5-ns dib mr3" href="{% block navlink %}{% url 'blog:list' %}{% endblock %}" title="Home">{% block nav %}utf9k{% endblock %}</a>
             <a class="link hover-red f6 f5-ns dib mr3" href="/" title="root">home</a>
             <a class="link hover-red f6 f5-ns dib mr3" href="/projects" title="About">projects</a>
             <a class="link hover-red f6 f5-ns dib mr3" href="/blog" title="About">blog</a>
