--- a/thingsimade/templates/blog/list.html
+++ b/thingsimade/templates/blog/list.html
@@ -7,7 +7,7 @@
     {% for post in posts %}
       <li class="pa3">
         <b class="db f4 mb1">
-          <a href="{% url 'blog:post_detail' post.slug %}">{{ post.title }}</a>
+          <a href="{% url 'blog:detail' post.slug %}">{{ post.title }}</a>
         </b>
         <span class="f5 db lh-copy measure">Written on {{ post.date|date:"N m, Y" }}</span>
         {{ post.pull_excerpt }}
