--- a/thingsimade/templates/contact/form.html
+++ b/thingsimade/templates/contact/form.html
@@ -1,6 +1,6 @@
 {% extends 'base/root.html' %}
 
-{% block title %}Contact | utf9k{% endblock %}
+{% block title %}contact | things i made{% endblock %}
 
 {% block nav %}cyber phonebooth{% endblock %}
 {% block navlink %}/contact{% endblock %}
