--- a/thingsimade/templates/blog/detail.html
+++ b/thingsimade/templates/blog/detail.html
@@ -7,7 +7,7 @@
     <header>
       <h1 class="b" id="title">{{ post.title }}</h1>
       <div class="meta">
-        {% if not post.published %}
+        {% if post.status not in "P" %}
         <p id="status">Status: {{ post.get_status_display }}</p>
         {% else %}
         <p id="published_date">Written on {{ post.date|date:"N m, Y" }}</p>
@@ -20,14 +20,14 @@
       {% endautoescape %}
     </section>
     <div id="pager" class="flex items-center justify-center pa4">
-      <a style="{% if not post.prev %}display: none;{% endif %}" href="{% if post.prev %}{% url 'blog:post_detail' post.prev %}{% endif %}" class="f5 no-underline bg-animate hover-bg-green inline-flex items-center pa3 ba border-box mr4">
+      <a style="{% if not post.prev %}display: none;{% endif %}" href="{% if post.prev %}{% url 'blog:detail' post.prev %}{% endif %}" class="f5 no-underline bg-animate hover-bg-green inline-flex items-center pa3 ba border-box mr4">
         <svg class="w1" data-icon="chevronLeft" viewBox="0 0 32 32" style="fill:currentcolor">
           <title>chevronLeft icon</title>
             <path d="M20 1 L24 5 L14 16 L24 27 L20 31 L6 16 z"></path>
           </svg>
         <span class="pl1">Previous</span>
       </a>
-      <a style="{% if not post.next %}display: none;{% endif %}" href="{% if post.next %}{% url 'blog:post_detail' post.next %}{% endif %}" class="f5 no-underline bg-animate hover-bg-green inline-flex items-center pa3 ba border-box">
+      <a style="{% if not post.next %}display: none;{% endif %}" href="{% if post.next %}{% url 'blog:detail' post.next %}{% endif %}" class="f5 no-underline bg-animate hover-bg-green inline-flex items-center pa3 ba border-box">
         <span class="pr1">Next</span>
         <svg class="w1" data-icon="chevronRight" viewBox="0 0 32 32" style="fill:currentcolor">
           <title>chevronRight icon</title>
