--- a/thingsimade/templates/blog/list.html
+++ b/thingsimade/templates/blog/list.html
@@ -3,17 +3,13 @@
 {% block title %}utf9k{% endblock %}
 
 {% block content %}
-  <ul class="list p10">
+  <ul class="list p10 measure center">
     {% for post in posts %}
-      <li class="pa3">
-        <b class="db f4 mb1">
+    <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--black-30">
           <a href="{% url 'blog:detail' post.slug %}">{{ post.title }}</a>
-        </b>
-        <span class="f5 db lh-copy measure">Written on {{ post.date|date:"N m, Y" }}</span>
-        {{ post.pull_excerpt }}
-      </li>
+    </li>
     {% empty %}
-      <li class="pa3">
+      <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--black-30">
         <b class="db f4 mb1">No posts have been written yet!</b>
       </li>
     {% endfor %}
