--- a/thingsimade/templates/projects/detail.html
+++ b/thingsimade/templates/projects/detail.html
@@ -11,7 +11,7 @@
       <h1 class="b" id="title">{{ project.title }}</h1>
       <div class="meta">
         {% if project.date %}
-        <p id="published_date">This project first appeared {{ project.time_since }}</p>
+        <p id="published_date">This project started life {{ project.time_since }}</p>
         {% endif %}
       </div>
     </header>
