--- a/thingsimade/templates/projects/list.html
+++ b/thingsimade/templates/projects/list.html
@@ -7,9 +7,11 @@
 
 {% block content %}
   <ul class="list p10 measure center">
+    <h2 class="f4 fw6 ph0 mh0">Projects</h2>
     {% for project in projects %}
-    <li class="lh-copy pv3 ba bl-0 bt-0 br-0 b--dotted b--black-30">
+    <li class="mv3 ba bl-0 bt-0 br-0 b--dotted b--black-30">
           <a href="{% url 'projects:detail' project.slug %}">{{ project.title }}</a>
+          <p>{{ project.summary }}</p>
     </li>
     {% empty %}
     <b class="db f4 mb1">No projects have been posted yet!</b>
