Added support for code injection

--- a/thingsimade/templates/base/root.html
+++ b/thingsimade/templates/base/root.html
@@ -8,6 +8,7 @@
         <link href="{% static 'base/tachyons.min.css' %}" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=NTR" type="text/css" rel="stylesheet" />
         <link href="{% static 'base/style.css' %}" type="text/css" rel="stylesheet" />
+        {% block head %}{% endblock %}
     </head>
     <body>
         <nav class="pa3">
@@ -22,5 +23,6 @@
             {% block content %}
             {% endblock %}
         </section>
+        {% block foot %}{% endblock %}
     </body>
 </html>
