--- a/thingsimade/templates/base/index.html
+++ b/thingsimade/templates/base/index.html
@@ -6,7 +6,7 @@
 {% block navlink %}/{% endblock %}
 
 {% block content %}
-  <div class="ph5 pv6 black-70">
+  <div class="f6 ph5 pv6 black-70">
     <p>Oh, hello there!</p>
 
     <p>Don't just sit there, click something!</p>
