--- a/thingsimade/templates/blog/detail.html
+++ b/thingsimade/templates/blog/detail.html
@@ -6,7 +6,7 @@
   <article class="cf ph3 ph5-ns pv5">
     <header class="fn fl-ns w-50-ns pr4-ns">
       <h1 class="mb3 mt0 lh-title">{{ post.title }}</h1>
-      <time class="f6 ttu tracked gray">
+      <time class="f6 gray">
         {% if post.status == "P" %}
           {{ post.date }}
         {% elif post.date != "P" and post.date != None %}
@@ -16,9 +16,8 @@
         {% endif %}
       </time>
     </header>
-    <div class="fn fl-ns w-50-ns">
-      <p class="lh-copy measure mt4 mt0-ns">{{ post.render|safe }}</p>
-    </div>
+    <div class="fn f6 fl-ns w-50-ns" id="content">
+      {{ post.render|safe }}
   </article>
 {% endblock %}
 
