Added stats app and setup last fm viewing

--- a/thingsimade/templates/base/index.html
+++ b/thingsimade/templates/base/index.html
@@ -3,7 +3,7 @@
 {% block title %}things i made{% endblock %}
 
 {% block nav %}#{% endblock %}
-{% block navlink %}/{% endblock %}
+{% block home %}[ home ]{% endblock %}
 
 {% block content %}
   <div class="f6 ph5 pv6 black-70">
