--- a/thingsimade/templates/blog/detail.html
+++ b/thingsimade/templates/blog/detail.html
@@ -1,6 +1,7 @@
 {% extends 'base/root.html' %}
 
 {% block title %}{{ post.title }} | utf9k{% endblock %}
+{% block blog %}[ blog ]{% endblock %}
 
 {% block content %}
   <article class="cf ph3 ph5-ns pv5">
