--- a/thingsimade/templates/blog/list.html
+++ b/thingsimade/templates/blog/list.html
@@ -1,6 +1,7 @@
 {% extends 'base/root.html' %}
 
 {% block title %}utf9k{% endblock %}
+{% block blog %}[ blog ]{% endblock %}
 
 {% block content %}
   <ul class="list ph3 ph5-ns pv4">
