--- a/thingsimade/templates/contact/form.html
+++ b/thingsimade/templates/contact/form.html
@@ -3,7 +3,7 @@
 {% block title %}contact | things i made{% endblock %}
 
 {% block nav %}cyber phonebooth{% endblock %}
-{% block navlink %}/contact{% endblock %}
+{% block contact %}[ contact ]{% endblock %}
 
 {% block content %}
 <form class="pa4 black-80" method="POST" action="http://localhost:8000/contact/">
