--- a/thingsimade/templates/projects/detail.html
+++ b/thingsimade/templates/projects/detail.html
@@ -3,7 +3,7 @@
 {% block title %}projects | things i made{% endblock %}
 
 {% block nav %}cool stuff{% endblock %}
-{% block navlink %}/projects{% endblock %}
+{% block projects %}[ projects ]{% endblock %}
 
 {% block content %}
   <article class="measure center">
