--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -5,9 +5,11 @@
 
 {% block content %}
   <article class="cf ph3 ph5-ns pv5">
-    <header class="fn fl-ns w-50-ns pr4-ns">
-      <h1 class="mb3 mt0 lh-title">{{ post.title }}</h1>
-      <time class="f6 gray">
+    <header class="fn fl-ns w-50-ns pr4-ns mb3">
+      <h1 class="f2 fw9 mb1 mt0">
+        {{ post.title }}
+      </h1>
+      <time class="f6 ttu tracked gray">
         {% if post.status == "P" %}
           {{ post.date }}
         {% elif post.date != "P" and post.date != None %}
@@ -19,6 +21,7 @@
     </header>
     <div class="fn f6 fl-ns w-50-ns" id="content">
       {{ post.render|safe }}
+    </div>
   </article>
 {% endblock %}
 
