--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -4,13 +4,13 @@
 {% block blog %}[ blog ]{% endblock %}
 
 {% block content %}
-  <ul class="list ph3 ph5-ns pv4">
-    {% for post in posts %}
-      <li class="dib mr2">
-        <a href="{{ post.slug }}" class="f6 f5-ns b db pa2 link mid-gray hover-hot-pink">{{ post.title }}</a>
-      </li>
-    {% empty %}
-        <b class="db f4 mb1">No posts have been written yet!</b>
-    {% endfor %}
-  </section>
+<section class="pa3 pa4-m pa5-l">
+  {% for post in posts %}
+    <a class="f3 link b no-underline black dib ph2 pv1 {% cycle 'hover-dark-blue' 'hover-blue' 'hover-light-blue' 'hover-green' 'hover-light-green' 'hover-yellow' 'hover-gold' 'hover-orange' 'hover-light-red' 'hover-red' 'hover-hot-pink' 'hover-pink' 'hover-light-purple' 'hover-purple' %}" href="{{ post.slug }}">
+      {{ post.title }}
+    </a> //
+  {% empty %}
+    <b class="db f4 mb1">No posts have been written yet!</b>
+  {% endfor %}
+</section>
 {% endblock %}
