--- a/thingsimade/templates/base/root.html
+++ b/thingsimade/templates/base/root.html
@@ -15,7 +15,7 @@
             <div class="pa3 pl3 db dtc-ns v-mid tl w-50">
                 <a class="link hover-hot-pink b f6 f5-ns dib">{% block nav %}utf9k{% endblock %}</a>
             </div>
-            <div class="pa3 pr3 db dtc-ns v-mid w-100 tl tr-ns mt2 mt0-ns">
+            <div class="pa3-ns pl3 pr3 pb3 pr3 db dtc-ns v-mid w-100 tl tr-ns mt2-ns mt0">
                 <a class="f6 fw6 hover-blue link mr2 dib" href="/" title="right back to the start">{% block home %}home{% endblock %}</a>
                 <a class="f6 fw6 hover-blue link mr2 dib" href="/projects" title="things i literally made">{% block projects %}projects{% endblock %}</a>
                 <a class="f6 fw6 hover-blue link mr2 dib" href="/blog" title="words and letters">{% block blog %}blog{% endblock %}</a>
