Slight font editing and disabled last fm for now

--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -19,7 +19,9 @@
       </span>
     </li>
     {% empty %}
-    <b class="db f3 mb1">Hmm, no projects have been published yet!</b>
+    <article class="measure center">
+      <b class="db f3 mb1">Hmm, no projects have been published yet!</b>
+    </article>
     {% endfor %}
   </ul>
 {% endblock %}
