--- a/stats/templates/stats/index.html
+++ b/stats/templates/stats/index.html
@@ -6,7 +6,7 @@
 {% block stats %}[ stats ]{% endblock %}
 
 {% block content %}
-    <article>
+    <!-- <article>
         <h2 class="f4 fw6">Recently listened</h2>
         <div class="cf pa2">
             {% for album in albums %}
@@ -21,7 +21,7 @@
             </div>
             {% endfor %}
         </div>
-    </article>
+    </article> -->
     <article>
         <h2 class="f4 fw6">Steam titles played in the last 2 weeks</h2>
         <div class="cf pa2">
