--- a/thingsimade/static/base/style.css
+++ b/thingsimade/static/base/style.css
@@ -1,6 +1,6 @@
 /* Globals */
 
-* {
+h1, h2, h3, h4, h5, h6, p, a, b, dd, time {
     color: #000;
     font-family: Helvetica, sans-serif;
     font-size: 1em;
@@ -39,9 +39,12 @@ article #pager { flex: 1; }
 }
 
 .codehilite {
-  border-radius: 4px;
-  font-family: Consolas, monospace;
-  font-size: 12px;
+  border-radius: 3px;
+}
+
+.codehilite span {
+  font-family: Menlo, Consolas, monospace;
+  font-size: 90%;
 }
 
 /* Contact */
@@ -63,7 +66,7 @@ h1 a {
 
 /* Pygments */
 
-.codehilite { padding: 1em; background: #282828; color: #ebdbb2; background-color: #282828; }
+.codehilite { padding: 1em; background: #32302F; color: #ebdbb2; background-color: #32302F; }
 .codehilite pre, .codehilite p { margin: 0; }
 .codehilite .hll { background-color: #49483e }
 .codehilite .c { color: #75715e } /* Comment */
