Edited global styling and code styling

--- a/thingsimade/static/base/style.css
+++ b/thingsimade/static/base/style.css
@@ -1,10 +1,10 @@
 /* Globals */
 
 h1, h2, h3, h4, h5, h6, p, a, b, dd, time {
-    color: #000;
-    font-family: Helvetica, sans-serif;
-    font-size: 1em;
-    font-weight: 400;
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
+  font-weight: 400;
 }
 
 /* Home */
@@ -42,9 +42,15 @@ article #pager { flex: 1; }
   border-radius: 3px;
 }
 
-.codehilite span {
+.codehilite span, code {
   font-family: Menlo, Consolas, monospace;
   font-size: 90%;
+}
+
+code {
+  border-radius: 2px;
+  color: #FF8000;
+  padding: 2px;
 }
 
 /* Contact */
