--- a/contact/templates/contact/robot.html
+++ b/contact/templates/contact/robot.html
@@ -7,10 +7,10 @@
 
 {% block content %}
   <div class="f6 ph5 pv6 black-70">
-    <h2 class="f4 fw6">Thanks for your message.</h2>
+    <h2 class="f4 fw6">Thanks for your spam.</h2>
 
-    <p>The good news is that you're not a robot!</p>
+    <p>It seems that Google thinks you're a robot!</p>
 
-    <p>The bad news is that you still have to pay human taxes :(</p>
+    <p>I've still forwarded on your message anyway and hopefully one day you'll join the ranks of humanity...</p>
   </div>
 {% endblock %}
